name:                aoc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/glebec/aoc#readme
license:             BSD3
license-file:        LICENSE
author:              Gabriel Lebec
maintainer:          glebec@gmail.com
copyright:           2018 Gabriel Lebec
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable aoc
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Day1.Chronal
                     , Day1.Input
                     , Day2.Input
                     , Day2.Inventory
                     , Day3.Input
                     , Day3.Overlaps
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , unordered-containers
                     , raw-strings-qq
                     , parsers
                     , trifecta
